Class4/allow-port.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-allow-port
spec:
  podSelector:
    matchLabels:
      team: qa
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              team: devops
      ports:
        - protocol: TCP
          port: 80
